objects/UserEngagement__dlm.object
<CustomObject>
    <fields>
        <fullName>ClientSession__c</fullName>
        <label>Client Session</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cloud__c</fullName>
        <label>Cloud</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedById__c</fullName>
        <label>Created By Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedDate__c</fullName>
        <label>Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CustomFields__c</fullName>
        <label>Custom Fields</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EntityType__c</fullName>
        <label>Entity Type</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entity__c</fullName>
        <label>Entity</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EventIdentifier__c</fullName>
        <label>Event Identifier</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EventName__c</fullName>
        <label>Event Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Feature__c</fullName>
        <label>Feature</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KQ_EventIdentifier__c</fullName>
        <label>Key Qualifier Event Identifier</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LoggedAt__c</fullName>
        <label>Logged At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LoggerAppName__c</fullName>
        <label>Logger App Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LoggerName__c</fullName>
        <label>Logger Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Org__c</fullName>
        <label>Org</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PageContext__c</fullName>
        <label>Page Context</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PageUrl__c</fullName>
        <label>Page Url</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Score__c</fullName>
        <label>Score</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserId__c</fullName>
        <label>User Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
</CustomObject>